SLCORE-415 Support sonar-plugin-api 9.13